crates/descar-core/tests/snapshots/type_checker_snapshot_tests__exact_match_f64.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.is_assignable(&Type::F64, &Type::F64)"
---
true
