crates/descar-core/tests/snapshots/type_checker_snapshot_tests__exact_match_i32.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.is_assignable(&Type::I32, &Type::I32)"
---
true
