crates/descar-core/tests/snapshots/type_checker_snapshot_tests__fallback_promotion_bool_and_string.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.promote_numeric_types(&Type::Bool, &Type::String)"
---
Bool
