crates/descar-core/tests/snapshots/type_checker_snapshot_tests__float_promotion_f32_to_f64.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.is_assignable(&Type::F32, &Type::F64)"
---
true
