crates/descar-core/tests/snapshots/type_checker_snapshot_tests__function_call_argument_mismatch.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2003,
        ),
        message: "Function 'add' may not return value in all code paths (expected return type: i32)",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 1,
                offset: 0,
                index: 0,
                utf8_offset: 0,
                code_point_offset: 0,
            },
            end: SourceLocation {
                line: 2,
                column: 2,
                offset: 32,
                index: 32,
                utf8_offset: 32,
                code_point_offset: 32,
            },
        },
        help: None,
    },
    TypeError {
        code: Some(
            E2029,
        ),
        message: "Argument 2 type mismatch: expected i32, found string",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 3,
                column: 11,
                offset: 43,
                index: 43,
                utf8_offset: 43,
                code_point_offset: 43,
            },
            end: SourceLocation {
                line: 3,
                column: 16,
                offset: 48,
                index: 48,
                utf8_offset: 48,
                code_point_offset: 48,
            },
        },
        help: None,
    },
]
