crates/descar-core/tests/snapshots/type_checker_snapshot_tests__function_call_not_using_variable.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2026,
        ),
        message: "Callee must be a function name",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 4,
                offset: 3,
                index: 3,
                utf8_offset: 3,
                code_point_offset: 3,
            },
            end: SourceLocation {
                line: 1,
                column: 7,
                offset: 6,
                index: 6,
                utf8_offset: 6,
                code_point_offset: 6,
            },
        },
        help: None,
    },
]
