crates/descar-core/tests/snapshots/type_checker_snapshot_tests__function_call_valid.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2003,
        ),
        message: "Function 'add' may not return value in all code paths (expected return type: i32)",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 1,
                offset: 0,
                index: 0,
                utf8_offset: 0,
                code_point_offset: 0,
            },
            end: SourceLocation {
                line: 2,
                column: 2,
                offset: 38,
                index: 38,
                utf8_offset: 38,
                code_point_offset: 38,
            },
        },
        help: None,
    },
]
