crates/descar-core/tests/snapshots/type_checker_snapshot_tests__if_invalid_condition.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2004,
        ),
        message: "Condition in 'if' statement must be boolean, found i64",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 5,
                offset: 4,
                index: 4,
                utf8_offset: 4,
                code_point_offset: 4,
            },
            end: SourceLocation {
                line: 1,
                column: 7,
                offset: 6,
                index: 6,
                utf8_offset: 6,
                code_point_offset: 6,
            },
        },
        help: None,
    },
]
