crates/descar-core/tests/snapshots/type_checker_snapshot_tests__incompatible_f64_to_f32.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "!tc.is_assignable(&Type::F64, &Type::F32)"
---
true
