crates/descar-core/tests/snapshots/type_checker_snapshot_tests__incompatible_i8_to_u8.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "!tc.is_assignable(&Type::I8, &Type::U8)"
---
true
